Kaggle MNIST CNN

--- a/mnist_kaggle.ipynb
+++ b/mnist_kaggle.ipynb
@@ -387,7 +387,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch [1], train_loss: 0.32404, val_loss: 0.16439, val_acc: 0.94860\nEpoch [2], train_loss: 0.11991, val_loss: 0.12705, val_acc: 0.96016\nEpoch [3], train_loss: 0.07809, val_loss: 0.12306, val_acc: 0.96406\nEpoch [4], train_loss: 0.06092, val_loss: 0.12346, val_acc: 0.96581\nEpoch [5], train_loss: 0.04955, val_loss: 0.13336, val_acc: 0.96641\nEpoch [6], train_loss: 0.03735, val_loss: 0.11545, val_acc: 0.97074\nEpoch [7], train_loss: 0.03155, val_loss: 0.13040, val_acc: 0.96870\nEpoch [8], train_loss: 0.02933, val_loss: 0.12018, val_acc: 0.97221\nEpoch [9], train_loss: 0.02609, val_loss: 0.13715, val_acc: 0.96977\nEpoch [10], train_loss: 0.03034, val_loss: 0.15594, val_acc: 0.96766\nEpoch [11], train_loss: 0.02265, val_loss: 0.14773, val_acc: 0.97247\nEpoch [12], train_loss: 0.02016, val_loss: 0.16805, val_acc: 0.96903\nEpoch [13], train_loss: 0.02458, val_loss: 0.16021, val_acc: 0.96915\nEpoch [14], train_loss: 0.02215, val_loss: 0.14821, val_acc: 0.97280\nEpoch [15], train_loss: 0.01690, val_loss: 0.19424, val_acc: 0.96761\nEpoch [16], train_loss: 0.02176, val_loss: 0.18522, val_acc: 0.97034\nEpoch [17], train_loss: 0.01442, val_loss: 0.16572, val_acc: 0.97405\nEpoch [18], train_loss: 0.02062, val_loss: 0.18491, val_acc: 0.96977\nEpoch [19], train_loss: 0.02524, val_loss: 0.16727, val_acc: 0.97183\nEpoch [20], train_loss: 0.00840, val_loss: 0.18799, val_acc: 0.97244\nEpoch [21], train_loss: 0.01707, val_loss: 0.17987, val_acc: 0.97211\nEpoch [22], train_loss: 0.01908, val_loss: 0.18031, val_acc: 0.97507\nEpoch [23], train_loss: 0.01352, val_loss: 0.18190, val_acc: 0.97057\nEpoch [24], train_loss: 0.01103, val_loss: 0.21727, val_acc: 0.97166\nEpoch [25], train_loss: 0.01816, val_loss: 0.25052, val_acc: 0.96610\n"
+     "text": "Epoch [1], train_loss: 0.33611, val_loss: 0.18513, val_acc: 0.94247\nEpoch [2], train_loss: 0.13425, val_loss: 0.11731, val_acc: 0.96480\nEpoch [3], train_loss: 0.08629, val_loss: 0.11339, val_acc: 0.96499\nEpoch [4], train_loss: 0.06619, val_loss: 0.10275, val_acc: 0.96868\nEpoch [5], train_loss: 0.05246, val_loss: 0.11968, val_acc: 0.96636\nEpoch [6], train_loss: 0.03972, val_loss: 0.12809, val_acc: 0.96494\nEpoch [7], train_loss: 0.03214, val_loss: 0.14668, val_acc: 0.96622\nEpoch [8], train_loss: 0.03790, val_loss: 0.12022, val_acc: 0.97218\nEpoch [9], train_loss: 0.03136, val_loss: 0.12558, val_acc: 0.97280\nEpoch [10], train_loss: 0.02360, val_loss: 0.13341, val_acc: 0.97282\nEpoch [11], train_loss: 0.02363, val_loss: 0.16308, val_acc: 0.96468\nEpoch [12], train_loss: 0.02501, val_loss: 0.15304, val_acc: 0.96913\nEpoch [13], train_loss: 0.02146, val_loss: 0.14381, val_acc: 0.97192\nEpoch [14], train_loss: 0.02380, val_loss: 0.15200, val_acc: 0.97263\nEpoch [15], train_loss: 0.01153, val_loss: 0.14542, val_acc: 0.97422\nEpoch [16], train_loss: 0.02055, val_loss: 0.17433, val_acc: 0.97240\nEpoch [17], train_loss: 0.02265, val_loss: 0.16291, val_acc: 0.97079\nEpoch [18], train_loss: 0.02618, val_loss: 0.16261, val_acc: 0.97157\nEpoch [19], train_loss: 0.01789, val_loss: 0.17944, val_acc: 0.96863\nEpoch [20], train_loss: 0.01344, val_loss: 0.17335, val_acc: 0.97178\nEpoch [21], train_loss: 0.01101, val_loss: 0.19017, val_acc: 0.97057\nEpoch [22], train_loss: 0.00979, val_loss: 0.18512, val_acc: 0.97008\nEpoch [23], train_loss: 0.00782, val_loss: 0.21959, val_acc: 0.97045\nEpoch [24], train_loss: 0.02721, val_loss: 0.26265, val_acc: 0.96586\nEpoch [25], train_loss: 0.02210, val_loss: 0.17710, val_acc: 0.97393\n"
     }
    ],
    "source": [
@@ -407,7 +407,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch [1], train_loss: 0.00494, val_loss: 0.17724, val_acc: 0.97609\nEpoch [2], train_loss: 0.00038, val_loss: 0.17835, val_acc: 0.97763\nEpoch [3], train_loss: 0.00009, val_loss: 0.17637, val_acc: 0.97803\nEpoch [4], train_loss: 0.00005, val_loss: 0.18287, val_acc: 0.97820\nEpoch [5], train_loss: 0.00003, val_loss: 0.18740, val_acc: 0.97779\nEpoch [6], train_loss: 0.00002, val_loss: 0.19508, val_acc: 0.97784\nEpoch [7], train_loss: 0.00001, val_loss: 0.20049, val_acc: 0.97777\nEpoch [8], train_loss: 0.00001, val_loss: 0.20282, val_acc: 0.97815\nEpoch [9], train_loss: 0.00001, val_loss: 0.20738, val_acc: 0.97791\nEpoch [10], train_loss: 0.00001, val_loss: 0.20779, val_acc: 0.97810\nEpoch [11], train_loss: 0.00000, val_loss: 0.21017, val_acc: 0.97803\nEpoch [12], train_loss: 0.00000, val_loss: 0.21110, val_acc: 0.97815\nEpoch [13], train_loss: 0.00000, val_loss: 0.21383, val_acc: 0.97803\nEpoch [14], train_loss: 0.00000, val_loss: 0.21619, val_acc: 0.97803\nEpoch [15], train_loss: 0.00000, val_loss: 0.21970, val_acc: 0.97820\nEpoch [16], train_loss: 0.00000, val_loss: 0.21952, val_acc: 0.97822\nEpoch [17], train_loss: 0.00000, val_loss: 0.22271, val_acc: 0.97862\nEpoch [18], train_loss: 0.00000, val_loss: 0.22488, val_acc: 0.97843\nEpoch [19], train_loss: 0.00000, val_loss: 0.22523, val_acc: 0.97815\nEpoch [20], train_loss: 0.00000, val_loss: 0.22643, val_acc: 0.97815\nEpoch [21], train_loss: 0.00000, val_loss: 0.22892, val_acc: 0.97815\nEpoch [22], train_loss: 0.00000, val_loss: 0.22826, val_acc: 0.97803\nEpoch [23], train_loss: 0.00000, val_loss: 0.22978, val_acc: 0.97834\nEpoch [24], train_loss: 0.00000, val_loss: 0.23233, val_acc: 0.97820\nEpoch [25], train_loss: 0.00000, val_loss: 0.23333, val_acc: 0.97827\n"
+     "text": "Epoch [1], train_loss: 0.00347, val_loss: 0.16128, val_acc: 0.97621\nEpoch [2], train_loss: 0.00031, val_loss: 0.16423, val_acc: 0.97756\nEpoch [3], train_loss: 0.00009, val_loss: 0.16413, val_acc: 0.97675\nEpoch [4], train_loss: 0.00005, val_loss: 0.16708, val_acc: 0.97663\nEpoch [5], train_loss: 0.00003, val_loss: 0.17284, val_acc: 0.97701\nEpoch [6], train_loss: 0.00002, val_loss: 0.17665, val_acc: 0.97725\nEpoch [7], train_loss: 0.00001, val_loss: 0.17895, val_acc: 0.97786\nEpoch [8], train_loss: 0.00001, val_loss: 0.18608, val_acc: 0.97758\nEpoch [9], train_loss: 0.00001, val_loss: 0.18984, val_acc: 0.97741\nEpoch [10], train_loss: 0.00001, val_loss: 0.19348, val_acc: 0.97784\nEpoch [11], train_loss: 0.00000, val_loss: 0.19661, val_acc: 0.97765\nEpoch [12], train_loss: 0.00000, val_loss: 0.19892, val_acc: 0.97746\nEpoch [13], train_loss: 0.00000, val_loss: 0.20014, val_acc: 0.97741\nEpoch [14], train_loss: 0.00000, val_loss: 0.20074, val_acc: 0.97756\nEpoch [15], train_loss: 0.00000, val_loss: 0.20310, val_acc: 0.97768\nEpoch [16], train_loss: 0.00000, val_loss: 0.20840, val_acc: 0.97789\nEpoch [17], train_loss: 0.00000, val_loss: 0.20661, val_acc: 0.97779\nEpoch [18], train_loss: 0.00000, val_loss: 0.20766, val_acc: 0.97784\nEpoch [19], train_loss: 0.00000, val_loss: 0.20874, val_acc: 0.97772\nEpoch [20], train_loss: 0.00000, val_loss: 0.21386, val_acc: 0.97784\nEpoch [21], train_loss: 0.00000, val_loss: 0.21252, val_acc: 0.97834\nEpoch [22], train_loss: 0.00000, val_loss: 0.21478, val_acc: 0.97827\nEpoch [23], train_loss: 0.00000, val_loss: 0.21997, val_acc: 0.97831\nEpoch [24], train_loss: 0.00000, val_loss: 0.21818, val_acc: 0.97850\nEpoch [25], train_loss: 0.00000, val_loss: 0.21953, val_acc: 0.97850\n"
     }
    ],
    "source": [
@@ -458,7 +458,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch [1], train_loss: 0.30524\nEpoch [2], train_loss: 0.11911\nEpoch [3], train_loss: 0.07963\nEpoch [4], train_loss: 0.05831\nEpoch [5], train_loss: 0.04616\nEpoch [6], train_loss: 0.03988\nEpoch [7], train_loss: 0.03321\nEpoch [8], train_loss: 0.03688\nEpoch [9], train_loss: 0.02633\nEpoch [10], train_loss: 0.03106\nEpoch [11], train_loss: 0.02240\nEpoch [12], train_loss: 0.02351\nEpoch [13], train_loss: 0.02208\nEpoch [14], train_loss: 0.02097\nEpoch [15], train_loss: 0.02245\nEpoch [16], train_loss: 0.01950\nEpoch [17], train_loss: 0.02208\nEpoch [18], train_loss: 0.02165\nEpoch [19], train_loss: 0.01725\nEpoch [20], train_loss: 0.02447\nEpoch [21], train_loss: 0.02128\nEpoch [22], train_loss: 0.01444\nEpoch [23], train_loss: 0.00931\nEpoch [24], train_loss: 0.01677\nEpoch [25], train_loss: 0.02081\n"
+     "text": "Epoch [1], train_loss: 0.30448\nEpoch [2], train_loss: 0.11336\nEpoch [3], train_loss: 0.07668\nEpoch [4], train_loss: 0.05831\nEpoch [5], train_loss: 0.04907\nEpoch [6], train_loss: 0.04420\nEpoch [7], train_loss: 0.03326\nEpoch [8], train_loss: 0.03123\nEpoch [9], train_loss: 0.03469\nEpoch [10], train_loss: 0.02420\nEpoch [11], train_loss: 0.02513\nEpoch [12], train_loss: 0.02784\nEpoch [13], train_loss: 0.02053\nEpoch [14], train_loss: 0.02158\nEpoch [15], train_loss: 0.01923\nEpoch [16], train_loss: 0.02093\nEpoch [17], train_loss: 0.02122\nEpoch [18], train_loss: 0.02060\nEpoch [19], train_loss: 0.01640\nEpoch [20], train_loss: 0.02341\nEpoch [21], train_loss: 0.01446\nEpoch [22], train_loss: 0.01186\nEpoch [23], train_loss: 0.01926\nEpoch [24], train_loss: 0.01210\nEpoch [25], train_loss: 0.01061\n"
     }
    ],
    "source": [
@@ -478,7 +478,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Epoch [1], train_loss: 0.00325\nEpoch [2], train_loss: 0.00036\nEpoch [3], train_loss: 0.00009\nEpoch [4], train_loss: 0.00006\nEpoch [5], train_loss: 0.00004\nEpoch [6], train_loss: 0.00003\nEpoch [7], train_loss: 0.00002\nEpoch [8], train_loss: 0.00002\nEpoch [9], train_loss: 0.00001\nEpoch [10], train_loss: 0.00001\nEpoch [11], train_loss: 0.00001\nEpoch [12], train_loss: 0.00001\nEpoch [13], train_loss: 0.00000\nEpoch [14], train_loss: 0.00000\nEpoch [15], train_loss: 0.00000\nEpoch [16], train_loss: 0.00000\nEpoch [17], train_loss: 0.00000\nEpoch [18], train_loss: 0.00000\nEpoch [19], train_loss: 0.00000\nEpoch [20], train_loss: 0.00000\nEpoch [21], train_loss: 0.00000\nEpoch [22], train_loss: 0.00000\nEpoch [23], train_loss: 0.00000\nEpoch [24], train_loss: 0.00000\nEpoch [25], train_loss: 0.00000\n"
+     "text": "Epoch [1], train_loss: 0.00314\nEpoch [2], train_loss: 0.00036\nEpoch [3], train_loss: 0.00009\nEpoch [4], train_loss: 0.00004\nEpoch [5], train_loss: 0.00003\nEpoch [6], train_loss: 0.00002\nEpoch [7], train_loss: 0.00002\nEpoch [8], train_loss: 0.00001\nEpoch [9], train_loss: 0.00001\nEpoch [10], train_loss: 0.00001\nEpoch [11], train_loss: 0.00001\nEpoch [12], train_loss: 0.00000\nEpoch [13], train_loss: 0.00000\nEpoch [14], train_loss: 0.00000\nEpoch [15], train_loss: 0.00000\nEpoch [16], train_loss: 0.00000\nEpoch [17], train_loss: 0.00000\nEpoch [18], train_loss: 0.00000\nEpoch [19], train_loss: 0.00000\nEpoch [20], train_loss: 0.00000\nEpoch [21], train_loss: 0.00000\nEpoch [22], train_loss: 0.00000\nEpoch [23], train_loss: 0.00000\nEpoch [24], train_loss: 0.00000\nEpoch [25], train_loss: 0.00000\n"
     }
    ],
    "source": [
@@ -512,13 +512,13 @@
     }
    ],
    "source": [
-    "mnist_test_data = torch.Tensor(test_df.values)\n",
+    "mnist_test_data = torch.Tensor(test_df.values) / 255.\n",
     "mnist_test_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
       "text/plain": "torch.Size([28000])"
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 29
     }
    ],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ImageId</th>\n      <th>Label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 31
     }
    ],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
